tests/compilefail92.out
[1mtests/compilefail92.pas:5:10: [0m[1m[91merror:[0m Invalid real number format: "3."
     5 | 	r := 3.;

