tests/compilefail92.pas
program compilefail92(output);
(* test invalid real number format *)
var r:real;
begin
	r := 3.;
	writeln(r);
end.
